[net] guard the nio selector against allocation and redundant syscalls
Replace the per-cycle selected-key HashSet with a flat array-backed
SelectedSelectionKeySet installed into the JDK selector via reflection, with a
graceful fallback to the HashSet path when the JPMS open is absent (including
InaccessibleObjectException, which extends RuntimeException rather than
ReflectiveOperationException, so init never throws).

Add a rebuild guard that recreates the selector after repeated zero-key returns
(the epoll selector-spin), a wakeup CAS that coalesces redundant selector.wakeup()
calls and closes the missed-wakeup race, and an interest-ops change guard so
interestOps and the wakeup fire only on a genuine interest change.