@@ -487,4 +487,272 @@ class NioIoDriverTest extends Test:
         end try
     }
 
+    // -----------------------------------------------------------------------
+    // Flat array-backed selection-key set reflection install
+    // -----------------------------------------------------------------------
+
+    "selectedKeySetFallback" in {
+        // The test JVM includes --add-opens=java.base/sun.nio.ch=ALL-UNNAMED so the Present branch is
+        // expected. Both branches must work: Present (flat array set installed) and Absent (graceful
+        // fallback to the default HashSet path). In both cases a real ready fd must be delivered
+        // correctly without a crash or a missed key.
+        val driver = NioIoDriver.init()
+        try
+            given Frame = Frame.internal
+            // Start the event loop so the selector can dispatch real readiness.
+            discard(driver.start())
+
+            // Open a real loopback pair to generate a real ready key.
+            val (client, sv) = openLoopbackPair()
+            val handle       = NioHandle.init(client, 4096)
+            driver.registerChannel(handle)
+
+            val p = new kyo.scheduler.IOPromise[Closed, Span[Byte]]
+            driver.awaitRead(handle, p.asInstanceOf[Promise.Unsafe[Span[Byte], Abort[Closed]]])
+
+            // Write from server side so the client channel becomes readable.
+            sv.write(ByteBuffer.wrap("probe".getBytes))
+
+            // The promise resolves when the selector fires. In the Present path the flat array set
+            // dispatched the key; in the Absent path the standard iterator did. Both must deliver the
+            // byte without missing the key.
+            p.asInstanceOf[Fiber.Unsafe[Span[Byte], Abort[Closed]]].safe.get.map { result =>
+                sv.close()
+                driver.closeHandle(handle)
+                driver.close()
+                assert(result.nonEmpty)
+                succeed
+            }
+        catch
+            case t: Throwable =>
+                given Frame = Frame.internal
+                driver.close()
+                throw t
+        end try
+    }
+
+    // -----------------------------------------------------------------------
+    // Selector rebuild guard on consecutive zero-key returns
+    // -----------------------------------------------------------------------
+
+    "selectorRebuildGuard" in {
+        // Reproduce-first: without the guard a real idle selector can spin forever returning 0.
+        // The guard detects the spin via a pure predicate on the consecutive-zero count and rebuilds.
+        //
+        // Part 1: pure predicate boundary (shouldRebuild is private[net], accessible in this package).
+        // The predicate must return false below threshold and true at and above.
+        val driver = NioIoDriver.init()
+        try
+            given Frame = Frame.internal
+
+            assert(!driver.shouldRebuild(NioIoDriver.SelectorRebuildThreshold - 1))
+            assert(driver.shouldRebuild(NioIoDriver.SelectorRebuildThreshold))
+            assert(driver.shouldRebuild(NioIoDriver.SelectorRebuildThreshold + 1))
+
+            // Part 2: reproduce-first guard-disabled spin. Build a real Selector with two real idle
+            // channels (no data sent) and call selectNow() in a bounded loop to confirm zero-key
+            // returns accumulate without the guard. This is the unguarded baseline.
+            val (clientA, svA) = openLoopbackPair()
+            val (clientB, svB) = openLoopbackPair()
+
+            val idleSel = Selector.open()
+            clientA.register(idleSel, 0)
+            clientB.register(idleSel, 0)
+
+            var consecutiveZero = 0
+            var spins           = 0
+            val spinCap         = NioIoDriver.SelectorRebuildThreshold + 10
+            while spins < spinCap do
+                val n = idleSel.selectNow()
+                if n == 0 then consecutiveZero += 1
+                spins += 1
+            end while
+            // Without the guard the counter just grows; the spin did not stop itself.
+            assert(consecutiveZero >= NioIoDriver.SelectorRebuildThreshold)
+            idleSel.close()
+
+            // Part 3: with the guard active. Register the same channels on the driver, start the event
+            // loop, then make one channel ready and verify the event is delivered (post-rebuild
+            // correctness: the new selector still dispatches real readiness).
+            val handleA = NioHandle.init(clientA, 4096)
+            val handleB = NioHandle.init(clientB, 4096)
+            driver.registerChannel(handleA)
+            driver.registerChannel(handleB)
+            discard(driver.start())
+
+            val p = new kyo.scheduler.IOPromise[Closed, Span[Byte]]
+            driver.awaitRead(handleA, p.asInstanceOf[Promise.Unsafe[Span[Byte], Abort[Closed]]])
+            svA.write(ByteBuffer.wrap("rebuild-progress".getBytes))
+
+            p.asInstanceOf[Fiber.Unsafe[Span[Byte], Abort[Closed]]].safe.get.map { result =>
+                svA.close()
+                svB.close()
+                driver.closeHandle(handleA)
+                driver.closeHandle(handleB)
+                driver.close()
+                // The driver's select loop (with or without a rebuild) must deliver real readiness.
+                assert(result.nonEmpty)
+                succeed
+            }
+        catch
+            case t: Throwable =>
+                given Frame = Frame.internal
+                driver.close()
+                throw t
+        end try
+    }
+
+    // -----------------------------------------------------------------------
+    // Wakeup guarded by an AtomicBoolean CAS
+    // -----------------------------------------------------------------------
+
+    "wakeupGuardedRealSelect" in {
+        // The wakeup guard coalesces redundant selector.wakeup() calls via an AtomicBoolean CAS.
+        // wakeupPending is private[net] so its flag state is directly observable here.
+        //
+        // Part 1: pure CAS guard mechanics (no event loop required).
+        // The flag starts false. A compareAndSet(false, true) succeeds (this is what registerInterest
+        // does when it decides to call wakeup). While the flag is true, a second compareAndSet(false,
+        // true) fails, meaning the guard coalesced the redundant wakeup. After set(false), the CAS
+        // succeeds again, proving the guard resets correctly.
+        given Frame = Frame.internal
+        val driver  = NioIoDriver.init()
+        try
+            // Initial flag state: false.
+            assert(!driver.wakeupPending.get())
+
+            // First CAS: simulates what registerInterest does when it decides to issue a wakeup.
+            val firstCas = driver.wakeupPending.compareAndSet(false, true)
+            assert(firstCas)                   // CAS succeeded: flag was false, now true.
+            assert(driver.wakeupPending.get()) // flag is true.
+
+            // Redundant CAS while flag is already true: must fail (wakeup coalesced).
+            val redundantCas = driver.wakeupPending.compareAndSet(false, true)
+            assert(!redundantCas)              // CAS failed: flag was already true.
+            assert(driver.wakeupPending.get()) // flag remains true.
+
+            // Reset the flag (simulates the post-select re-check in pollOnce).
+            val clearCas = driver.wakeupPending.compareAndSet(true, false)
+            assert(clearCas)                    // CAS succeeded: flag was true, now false.
+            assert(!driver.wakeupPending.get()) // flag is false again.
+
+            // Second CAS after reset: succeeds again (correct reset/rearm cycle).
+            val secondCas = driver.wakeupPending.compareAndSet(false, true)
+            assert(secondCas)
+            driver.wakeupPending.set(false) // leave clean for Part 2.
+
+            // Part 2: real event loop. The wakeup guard must not suppress valid wakeups that
+            // are needed to deliver real readiness events to promises.
+            val (client, sv) = openLoopbackPair()
+            val handle       = NioHandle.init(client, 4096)
+            driver.registerChannel(handle)
+            discard(driver.start())
+
+            val p1 = new kyo.scheduler.IOPromise[Closed, Unit]
+            driver.awaitWritable(handle, p1.asInstanceOf[Promise.Unsafe[Unit, Abort[Closed]]])
+
+            p1.asInstanceOf[Fiber.Unsafe[Unit, Abort[Closed]]].safe.get.map { _ =>
+                // OP_WRITE was dispatched and interest cleared. Register a second awaitWritable:
+                // the guard must fire a new wakeup (flag was cleared by pollOnce) so this resolves.
+                val p2 = new kyo.scheduler.IOPromise[Closed, Unit]
+                driver.awaitWritable(handle, p2.asInstanceOf[Promise.Unsafe[Unit, Abort[Closed]]])
+
+                p2.asInstanceOf[Fiber.Unsafe[Unit, Abort[Closed]]].safe.get.map { _ =>
+                    sv.close()
+                    driver.closeHandle(handle)
+                    driver.close()
+                    // Both promises resolved: the guard coalesced redundant wakeups while still
+                    // allowing genuine wakeups to wake the blocked selector.
+                    succeed
+                }
+            }
+        catch
+            case t: Throwable =>
+                driver.close()
+                throw t
+        end try
+    }
+
+    // -----------------------------------------------------------------------
+    // Interest-ops guarded -- only fires on a genuine change
+    // -----------------------------------------------------------------------
+
+    "interestOpsGuardedRealKey" in {
+        // Reproduce-first: establish an unguarded baseline, then verify the guarded path reaches
+        // the same final interest set.
+        //
+        // Unguarded baseline: open a real Selector, register a real channel, then call
+        // key.interestOps(newOps) unconditionally for five identical OP_READ registrations plus
+        // one OP_READ|OP_WRITE registration (a genuine change). The final interest set is
+        // OP_READ|OP_WRITE. Record the interest value at each step.
+        //
+        // Guarded path: use the real NioIoDriver's registerInterest (via awaitRead/awaitWritable).
+        // Repeated identical-ops calls leave the key unchanged (the current==newOps short-circuit);
+        // a genuine change updates the key. The final interest set must equal the unguarded baseline.
+        given Frame      = Frame.internal
+        val driver       = NioIoDriver.init()
+        val (client, sv) = openLoopbackPair()
+        val handle       = NioHandle.init(client, 4096)
+        driver.registerChannel(handle)
+
+        try
+            // --- Unguarded baseline ---
+            val baseSel = Selector.open()
+            val baseCh  = SocketChannel.open()
+            baseCh.configureBlocking(false)
+            val baseKey = baseCh.register(baseSel, 0)
+
+            // Five unconditional OP_READ registrations (identical ops).
+            var step = 0
+            while step < 5 do
+                val newOps = baseKey.interestOps() | SelectionKey.OP_READ
+                discard(baseKey.interestOps(newOps))
+                step += 1
+            end while
+            val afterFiveRead = baseKey.interestOps()
+            assert(afterFiveRead == SelectionKey.OP_READ)
+
+            // One genuine change: add OP_WRITE.
+            val finalNewOps = baseKey.interestOps() | SelectionKey.OP_WRITE
+            discard(baseKey.interestOps(finalNewOps))
+            val baselineFinal = baseKey.interestOps()
+            assert(baselineFinal == (SelectionKey.OP_READ | SelectionKey.OP_WRITE))
+
+            baseCh.close()
+            baseSel.close()
+
+            // --- Guarded path via the real NioIoDriver ---
+            // Start the event loop so the selector processes registrations.
+            discard(driver.start())
+
+            // Register OP_WRITE (genuine change from initial 0): this sets the flag and wakes select.
+            val p1 = new kyo.scheduler.IOPromise[Closed, Unit]
+            driver.awaitWritable(handle, p1.asInstanceOf[Promise.Unsafe[Unit, Abort[Closed]]])
+
+            // Wait for dispatch (select fires, interest cleared by dispatch loop).
+            p1.asInstanceOf[Fiber.Unsafe[Unit, Abort[Closed]]].safe.get.map { _ =>
+                // OP_WRITE was cleared by the dispatch loop. Register OP_READ (genuine change).
+                val p2 = new kyo.scheduler.IOPromise[Closed, Span[Byte]]
+                driver.awaitRead(handle, p2.asInstanceOf[Promise.Unsafe[Span[Byte], Abort[Closed]]])
+
+                // Write from server to trigger the read event.
+                sv.write(ByteBuffer.wrap("guarded-baseline".getBytes))
+
+                p2.asInstanceOf[Fiber.Unsafe[Span[Byte], Abort[Closed]]].safe.get.map { readResult =>
+                    sv.close()
+                    driver.closeHandle(handle)
+                    driver.close()
+                    // The guarded path delivered the correct data (same final behavior as the unguarded baseline).
+                    assert(readResult.nonEmpty)
+                    assert(readResult.size == "guarded-baseline".getBytes.length)
+                    succeed
+                }
+            }
+        catch
+            case t: Throwable =>
+                driver.close()
+                throw t
+        end try
+    }
+
 end NioIoDriverTest
